--- a/Index.css
+++ b/Index.css
@@ -3,12 +3,14 @@
 }
 body {
     background-color: black;
-    background-image: url(pics/wallpaper.gif);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background: url(pics/wallpaper.gif) no-repeat center center fixed;
     color: #fff;
     padding: 0%;
     margin: 0%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .pages {
